fixed flicker

--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,12 @@ footer p {
     z-index: 4000;
 }
 
+@media (max-width: 580px) {
+    .hero-text {
+        font-size: calc(1.2rem + 3.9vw) !important;
+    }
+}
+
 @media (max-width: 991.98px) {
     .offcanvas-collapse {
         padding-top: 3rem;
